Fix grep warning on grep 3.8